# console

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  dependencies.py
app/api/v1/: __init__.py  analytics.py  announcements.py  auth.py  config.py
app/db/queries/: __init__.py
backend/: .env.example  Dockerfile  README.md  fix_null_values.py  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/v1/: activities.py  admin_logs.py  analytics.py  levels.py  settings.py  users.py
backend/app/core/: exceptions.py  security.py
backend/app/db/: __init__.py
backend/app/db/queries/: __init__.py
backend/app/db/repositories/: __init__.py
backend/app/models/: __init__.py
backend/tests/: conftest.py
backend/tests/api/: test_activities.py  test_analytics.py  test_announcements.py  test_auth.py  test_levels.py  test_settings.py  test_users.py
backend/tests/fixtures/: mock_data.py
backend/tests/integration/: test_workflows.py
frontend/: .env.development  .env.example  .env.production.example  index.html  package.json  playwright.config.js  pnpm-lock.yaml  vite.config.js
frontend/docs/: API_INTEGRATION.md
frontend/e2e/: activities.spec.js  announcements.spec.js  auth.spec.js  dashboard.spec.js  helpers.js  settings.spec.js  users.spec.js
frontend/src/: App.vue  main.js
frontend/src/api/: client.ts  services.ts  types.ts
frontend/src/layout/: AdminLayout.vue
tests/: conftest.py  requirements.txt
tests/api/: test_activities.py  test_announcements.py  test_levels.py  test_settings.py  test_users.py
(+13 files in other folders)
